Fixed calendar spacing

--- a/src/components/input/input-date-picker/day-picker.module.css
+++ b/src/components/input/input-date-picker/day-picker.module.css
@@ -1,3 +1,7 @@
+.day-picker {
+  margin-bottom: 2rem;
+}
+
 .day-picker :global(.DayPickerInput) {
   width: 100%;
 }
@@ -6,9 +10,8 @@
   position: relative;
   width: 100%;
   height: 4rem;
-  padding-left: 1.5rem;
   margin-top: 1rem;
-  margin-bottom: 2rem;
+  padding-left: 1.5rem;
   background-color: theme("colors.background");
   border-width: 1px;
   border-radius: 0.25rem;
